# miniplc0-compiler

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  fmts.hpp  judge.toml  main.cpp
analyser/: analyser.cpp  analyser.h
error/: error.h
instruction/: instruction.h
tests/: simple_vm.hpp  test_analyser.cpp  test_main.cpp  test_tokenizer.cpp
tokenizer/: token.h  tokenizer.cpp  tokenizer.h  utils.hpp
